// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Episode test img is 1`] = `
<div
  className="Episode"
>
  <b
    className="Number"
  >
    x
  </b>
  <img
    alt="EpisodeImage"
    src="medium"
  />
  <div
    className="About"
  >
    <b />
    <br />
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Episode test img no 1`] = `
<div
  className="Episode"
>
  <b
    className="Number"
  >
    x
  </b>
  <img
    alt="EpisodeImage"
    src="test-file-stub"
  />
  <div
    className="About"
  >
    <b />
    <br />
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</div>
`;
